[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fengsha_prep"
version = "0.0.1"
description = "Tools to retrieve and process inputs needed for the noaa fengsha dust emission model"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "soilgrids",
    "requests",
    "xarray",
    "netcdf4",
    "xesmf",
    "numpy",
    "pandas",
    "satpy",
    "scikit-learn",
    "aiohttp",
    "s3fs",
    "earthaccess",
    "xgboost",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]
