[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fengsha_prep"
version = "0.0.1"
description = "Tools to retrieve and process inputs needed for the noaa fengsha dust emission model"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "soilgrids",
    "requests",
    "xarray",
    "netcdf4",
    "xesmf",
    "numpy",
    "pandas",
    "satpy",
    "scikit-learn",
    "aiohttp",
    "s3fs",
    "earthaccess",
    "xgboost",
    "rioxarray",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mkdocs",
    "mkdocstrings[python]",
    "mkdocs-material",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 88
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4", # flake8-comprehensions
  "UP", # pyupgrade
  "ASYNC", # flake8-async
]
ignore = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["fengsha_prep"]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
